Mon  May 13 2002	H. Wade Minter (minter@lunenburg.org)
     * Added a warning popup dialog when people do "blank" searches that 
       would result in the entire database getting displayed.  Thanks to
       Randy in KC for the idea.

Thu  May  9 2002	H. Wade Minter (minter@lunenburg.org) 
     * Added Scrollwheel mouse support in the scrolled listboxes.  Thanks
       to Bling-Bling in Raleigh for the idea.

Wed  May  8 2002	H. Wade Minter (minter@lunenburg.org)
     * Released version 1.5

Thu  May  2 2002	H. Wade Minter (minter@lunenburg.org)
     * Added some hardcoded "use" lines at the top of the script.  This
       is required by perl2exe, which I am investigating using for
       the Windows builds.
     * Added code to check for a file named "default.mrv" in the hotkey
       save directory.  If that exists, load up those hotkeys when
       the program starts.  Suggested by Randy at CSZ-KC.
     * Fixed a bug where the "Number of items returned" count wouldn't
       decrement when an MP3 is unavailable/unreadable.

Wed  Apr 24 2002	H. Wade Minter (minter@lunenburg.org)
     * More documentation work between 4/15 and now.
     * Placed requirement on new module to show length of WAV files 
       (Audio::Wav).
     * Broke out song-length code into its own function to better
       abstract that part.

Mon  Apr 15 2002	H. Wade Minter (minter@lunenburg.org)
     * Sent the taxes off.  Yuck.
     * Clarified some stuff in the docs in preparation for shipping
       the software to Buffalo and KC.
     * Removed the dependancy on Data::Dumper, since I don't think that's
       needed.

Mon  Feb 11 2002	H. Wade Minter (minter@lunenburg.org)
     * Released version 1.4

Thu  Feb  7 2002	H. Wade Minter (minter@lunenburg.org)
     * Changed the Add Song box to use color instead of *'s to denote
       required fields.
     * Switched the documentation screenshots from .jpg/.eps (which
       were not working well) to .png.  Seems to be better for both